--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,50 +1,148 @@
-.Navbar {
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	/* background-color: #333; */
-	padding: 30px 0;
+/* 600 768 992 1200 */
 
-	/* position: fixed;
-	z-index: 100;
-	top: 0;
-	left: 15%; */
+@media only screen and (max-width: 768px) {
+	.Navbar {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 30px 0;
+		position: relative;
+	}
+
+	.active {
+		position: absolute;
+		left: 100%;
+		width: 40%;
+		background-color: #333;
+		color: #fff;
+		z-index: 100;
+		top: 20%;
+		transition: all 0.5s;
+	}
+
+	.Navbar--logo,
+	.menu-icon {
+		margin: 0 20px;
+	}
+	.nav-1 {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		margin: 0 20px;
+	}
+
+	.menu-icon {
+		display: flex;
+		align-items: center;
+		color: #fff;
+		cursor: pointer;
+	}
+
+	.Navbar--list {
+		left: -120%;
+		display: flex;
+		flex-direction: column;
+		/* justify-content: center; */
+		align-items: center;
+		padding: 0;
+		margin: 0;
+		width: 100%;
+		transition: all 0.5s;
+
+		/* font-size: 16px; */
+	}
+
+	.Navbar--list__in {
+		list-style-type: none;
+		cursor: pointer;
+		color: #fff;
+		font-weight: 800;
+		padding: 10px;
+		margin: 0;
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: rgba(173, 149, 149, 0.178);
+		border: 0.1px solid rgba(51, 51, 51, 0.212);
+	}
+
+	a:hover {
+		color: red;
+		transition: all 0.5s;
+	}
+	/* 
+	.Navbar--list__in:not(:last-child) {
+		margin-right: 45px;
+	} */
+
+	.Navbar--logo__in {
+		cursor: pointer;
+	}
+
+	.Navbar--btn__in {
+		padding: 10px 30px;
+		background-color: red;
+		color: #fff;
+		font-weight: 800;
+		border: none;
+		outline: none;
+		cursor: pointer;
+	}
+	a {
+		text-decoration: none;
+		color: #fff;
+	}
 }
 
-.Navbar--list {
-	display: flex;
-}
+/* ABOVE 768 */
+@media only screen and (min-width: 768px) {
+	.menu-icon {
+		display: none;
+	}
+	.Navbar {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		padding: 30px 0;
+	}
 
-.Navbar--list__in {
-	list-style-type: none;
-	cursor: pointer;
-	color: #fff;
-	font-weight: 800;
-}
+	.Navbar--list {
+		display: flex;
+	}
 
-a:hover {
-	color: red;
-	transition: all 0.5s;
-}
+	.Navbar--list__in {
+		list-style-type: none;
+		cursor: pointer;
+		color: #fff;
+		font-weight: 800;
+	}
 
-.Navbar--list__in:not(:last-child) {
-	margin-right: 45px;
-}
+	a:hover {
+		color: red;
+		transition: all 0.5s;
+	}
 
-.Navbar--logo__in {
-	cursor: pointer;
-}
+	.Navbar--list__in:not(:last-child) {
+		margin-right: 45px;
+	}
 
-.Navbar--btn__in {
-	padding: 10px 30px;
-	background-color: red;
-	color: #fff;
-	font-weight: 800;
-	border: none;
-	outline: none;
-	cursor: pointer;
-}
-a {
-	text-decoration: none;
-	color: #fff;
+	.Navbar--logo__in {
+		cursor: pointer;
+	}
+
+	.Navbar--btn__in {
+		padding: 10px 30px;
+		background-color: red;
+		color: #fff;
+		font-weight: 800;
+		border: none;
+		outline: none;
+		cursor: pointer;
+	}
+	a {
+		text-decoration: none;
+		color: #fff;
+	}
 }
